--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); 
+  -webkit-higlight-color:rgba(0,0,0,0)
 }
 
 .App-logo {
